--- a/stylesheets/ui.styl
+++ b/stylesheets/ui.styl
@@ -94,7 +94,7 @@ $ArrowColor = #222
 .jtBorderRadius3
   border-radius 3px
 .jtGrayGradient
-  color black
+  color #2a2a2a
   background-color #c0c0c0
   filter unquote("progid:DXImageTransform.Microsoft.gradient(startColorstr=#fff8f8f8,endColorstr=#ffc0c0c0,enabled=true)")
   vicansoGradient #f8f8f8, #c0c0c0
@@ -164,6 +164,8 @@ $ArrowColor = #222
     li
       cursor pointer
       padding 3px 10px
+      &.checked
+        background url(./icon_ok.png) no-repeat right center
       &:hover
         color white
         background-color #800000
