--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -1,5 +1,5 @@
 html {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "微软雅黑", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 13px;
   line-height: 20px;
   background: url("../images/bodybg.jpg");
