--- a/stylesheets/ui.styl
+++ b/stylesheets/ui.styl
@@ -47,6 +47,8 @@ vicansoGradient(start = #2c2c2c, end = #111)
   &:hover
     background-color #c0c0c0
     vicansoGradient #f8f8f8, #c0c0c0
+  &.disabled
+    color #d1d1d1
 .jtBtnPrimary
   background-color #0054a6
   border 1px solid #0054a6
@@ -123,6 +125,7 @@ $ArrowColor = #222
   top 0
   bottom 0
   right 0
+  z-index 9
   background-color rgba(0, 0, 0, 0.6)
 
 .jtSelect
@@ -172,6 +175,7 @@ $ArrowColor = #222
 
 .jtDialog
   box-shadow 0 0 0 1px rgba(0, 0, 0, 0.3)
+  border unquote('1px solid #c0c0c0\9')
   width 500px
   position fixed
   left 50%
@@ -218,6 +222,7 @@ $ArrowColor = #222
   background-color #fff
   border 1px solid $jtDatePickerBorderColor
   border 1px solid rgba(0, 0, 0, 0.2)
+  border unquote('1px solid #c0c0c0\9')
   padding 4px
   box-shadow 0 5px 10px rgba(0, 0, 0, 0.2)
   user-select none
@@ -277,6 +282,7 @@ $ArrowColor = #222
       
 .jtAccordion
   box-shadow 0 0 0 1px rgba(0, 0, 0, 0.3)
+  border unquote('1px solid #c0c0c0\9')
   .item
     .title
       height 30px
@@ -299,6 +305,7 @@ $ArrowColor = #222
 
 .jtTabs
   box-shadow 0 0 0 1px rgba(0, 0, 0, 0.3)
+  border unquote('1px solid #c0c0c0\9')
   .nav
     $navHeight = 30px
     height $navHeight
